updating link to website

--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@ $(document).ready(function () {
 <li>update &quot;Your Project Title Here&quot; to a new title in the YAML header</li>
 <li>knit <code>index.Rmd</code></li>
 <li>commit and push BOTH the <code>index.Rmd</code> and the <code>index.html</code> files</li>
-<li>go to stat231-f20.github.io/blog-espn/ to see the published test document (this is publicly available!)</li>
+<li>go to <a href="https://stat231-f20.github.io/Blog-ESPN/" class="uri">https://stat231-f20.github.io/Blog-ESPN/</a> to see the published test document (this is a publicly available website!)</li>
 </ul>
 </div>
 </div>
